--- a/style.css
+++ b/style.css
@@ -27,7 +27,36 @@ and Blueprint http://www.blueprintcss.org/
 -------------------------------------------------------------- */
 
 /* Custom Africa Rizing styles */
+
+@media only screen and (max-width: 500px){
+	#masthead .site-logo{
+		float:left;
+		margin-right: 20px;
+	}
+	aside .main-navigation ul, .widget-area ul, .widget-area ol{
+		margin-left:-20px; 
+		margin-right:-20px;
+	}
+	aside ul li{
+		border-top: 1px solid #CCC;
+		margin:0;
+		padding:0;
+	}
+	aside ul li a{
+		width: 100%;
+		padding: 5px 20px;
+		margin:0;
+	}
+	aside ul li:last-of-type{
+		border-bottom: 1px solid #CCC;
+	}
+}
+
+
+
 h1.entry-title a, h1.site-title a{color: #333;}
+h1.site-title a{text-transform: uppercase;}
+h1.site-title a .orangeHighlight {color: orange;}
 
 /* Remove theme CSS styling that is causing skin tones to be unintentionally darker on featured images */
 /* alternately, avoid setting post titles on top of the images */
