--- a/style.css
+++ b/style.css
@@ -54,6 +54,34 @@ and Blueprint http://www.blueprintcss.org/
 
 
 
+/*Staff styles for the about section*/
+#staff h3{margin-bottom:0;}
+
+#staff.section{width: 100%; margin: 0; padding: 35px 0 0 0;}
+#staff .member{width: 100%; display: block; margin: 0; padding: 10px 0; border-top: solid 1px #CCC; clear:both;}
+#staff .member .photo{width: 36%; margin: 0 4% 10px 0; float:left; /*border-radius: 10px*/}
+
+#staff .member .photo img.square{width: 100%; padding: 0; height: auto;}
+#staff .member .photo img.rectangle{display: none; width: 100%; padding: 0; height: auto;}
+#staff .member .profile{padding:0; float: right; width: 60%;}
+#staff .member .profile p{font-family: "Myriad Pro", Helvetica, Arial, sans-serif; margin:0;}
+#staff .member .profile h4{font-family: "Myriad Pro", Helvetica, Arial, sans-serif; font-size: 20px; margin: 0; clear: none;}
+#staff .member .profile p.biography{margin-top: 10px; font-size: .8em; line-height: 1.4em; margin-bottom: 10px; }
+
+@media only screen and (min-width: 700px) {
+	#staff.section{width: 100%; margin: 0; padding: 35px 0 0 0;}
+	#staff .member{width: 46%; display: inline-block; margin: 0 2% 30px 0; padding: 0; vertical-align: top; border-top: none;}
+
+	#staff .member .profile{padding:0;  float: right; width: 60%;}
+	#staff .member .photo{width: 36%; margin: 0 4% 0 0;}
+
+	#staff h3{margin-bottom:30px;}
+}
+
+
+
+
+
 h1.entry-title a, h1.site-title a{color: #333;}
 h1.site-title a{text-transform: uppercase;}
 h1.site-title a .orangeHighlight {color: orange;}
