--- a/style.css
+++ b/style.css
@@ -28,11 +28,14 @@ and Blueprint http://www.blueprintcss.org/
 
 /* Custom Africa Rizing styles */
 
+
 @media only screen and (max-width: 500px){
 	#masthead .site-logo{
 		float:left;
 		margin-right: 20px;
 	}
+
+	/* styling sidebar nav links as full-width links */
 	aside .main-navigation ul, .widget-area ul, .widget-area ol{
 		margin-left:-20px; 
 		margin-right:-20px;
@@ -43,7 +46,6 @@ and Blueprint http://www.blueprintcss.org/
 		padding:0;
 	}
 	aside ul li a{
-		width: 100%;
 		padding: 5px 20px;
 		margin:0;
 	}
@@ -54,7 +56,7 @@ and Blueprint http://www.blueprintcss.org/
 
 
 
-/*Staff styles for the about section*/
+/* Staff styles for the about/mission page */
 #staff h3{margin-bottom:0;}
 
 #staff.section{width: 100%; margin: 0; padding: 35px 0 0 0;}
@@ -80,11 +82,23 @@ and Blueprint http://www.blueprintcss.org/
 
 
 
+/*experimenting with 
+.entry-content img.size-medium{width: 100% !important;}
+.entry-content img.size-mugshot{width: 50% !important;float: left; margin-right: 20px;}
+
+@media only screen and (min-width: 600px) {
+	.entry-content img.size-mugshot{width: 200px !important; }
+}
+@media only screen and (min-width: 700px) {
+	.entry-content img.size-medium{width: 50% !important; float: left; margin-right: 20px;}
+}
+
 
 
 h1.entry-title a, h1.site-title a{color: #333;}
 h1.site-title a{text-transform: uppercase;}
 h1.site-title a .orangeHighlight {color: orange;}
+
 
 /* Remove theme CSS styling that is causing skin tones to be unintentionally darker on featured images */
 /* alternately, avoid setting post titles on top of the images */
