--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ and Blueprint http://www.blueprintcss.org/
 
 
 
-/*experimenting with 
+/* experimenting with styles for images sizes */
 .entry-content img.size-medium{width: 100% !important;}
 .entry-content img.size-mugshot{width: 50% !important;float: left; margin-right: 20px;}
 
