--- a/style.css
+++ b/style.css
@@ -31,11 +31,12 @@ h1.entry-title a, h1.site-title a{color: #333;}
 h1.site-title a{text-transform: uppercase;}
 h1.site-title a .orangeHighlight {color: orange;}
 
+.site-master-logo img {opacity: 1;}
 
 @media only screen and (max-width: 500px){
 	#masthead .site-logo{
 		float:left;
-		margin-right: 20px;
+		margin-right: 10px;
 	}
 	#masthead .site-title, .single-column-layout #masthead .site-title{
 		padding-top:20px;
