--- a/style.css
+++ b/style.css
@@ -31,7 +31,15 @@ h1.entry-title a, h1.site-title a{color: #333;}
 h1.site-title a{text-transform: uppercase;}
 h1.site-title a .orangeHighlight {color: orange;}
 
-.site-master-logo img {opacity: 1;}
+
+@media only screen and (max-width: 400px){
+	#masthead .site-logo img, .single-column-layout #masthead .site-logo img {max-width:50px;}
+	body #masthead .site-title, .single-column-layout #masthead .site-title{
+		padding:10px 0 0 0;
+		font-size: 24px;
+	}
+}
+
 
 @media only screen and (max-width: 500px){
 	#page {margin-top:25px;}
